// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-iKTcqh hgmKXD test-class"
  >
    <div
      class="sc-gnpbhQ bQWpPO"
    >
      <label
        class="sc-elDIKY gnGMO"
        for="test-input-id"
      >
        <span
          class="sc-fQpRED crYybt"
        >
          Test Input:
        </span>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="sc-la-DxNn bCcJBq"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-braxZu kDQiNE"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 64 64"
        width="1em"
      >
        <path
          d="M18.947 17.153l26.098 25.903M19.045 43.153l25.902-26.097"
          fill="none"
          stroke="currentColor"
          stroke-miterlimit="10"
          stroke-width="2"
        />
      </svg>
    </div>
    <span
      class="sc-gJhJTp kdUplm"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-iKTcqh hgmKXD test-class"
  >
    <div
      class="sc-gnpbhQ bQWpPO"
    >
      <label
        class="sc-elDIKY gnGMO"
        for="test-input-id"
      >
        <span
          class="sc-fQpRED crYybt"
        >
          Test Input:
        </span>
        <abbr
          class="sc-dsLQwm goLSTG"
          title="required"
        >
          *
        </abbr>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="sc-la-DxNn bCcJBq"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-braxZu kDQiNE"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 64 64"
        width="1em"
      >
        <path
          d="M18.947 17.153l26.098 25.903M19.045 43.153l25.902-26.097"
          fill="none"
          stroke="currentColor"
          stroke-miterlimit="10"
          stroke-width="2"
        />
      </svg>
    </div>
    <span
      class="sc-gJhJTp kdUplm"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
